@@ -213,8 +213,7 @@ class DBsTreeModel(QAbstractItemModel):
 
         # Check the file format
         try:
-            codec, codec_name = vitables.utils.getCodec()
-            if not tables.isHDF5File(filepath.encode(codec_name)):
+            if not tables.isHDF5File(filepath):
                 error = self.__tr(\
                     'Opening cancelled: %s has not HDF5 format.', 
                     'A logger error message') % filepath
@@ -317,9 +316,7 @@ class DBsTreeModel(QAbstractItemModel):
             'A logger info message')
         (f_handler, filepath) = tempfile.mkstemp('.h5', 'FT_')
         os.close(f_handler)
-        codec, codec_name = vitables.utils.getCodec()
-        filepath = QDir.fromNativeSeparators(filepath)
-        self.tmp_filepath = unicode(codec.fromUnicode(filepath), codec_name)
+        self.tmp_filepath = unicode(QDir.fromNativeSeparators(filepath))
         db_doc = self.createDBDoc(self.tmp_filepath, True)
         return db_doc
 
